# voicebot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  user_profile.json
docs/: deployment.md  development.md
src/aas/: main.py  models.py  router.py
src/aas/utils/: chat.py  profile_manager.py  speech_recognizer.py  speech_synthesizer.py  wake_phrase.py
src/web/: index.html  package-lock.json  package.json
src/web/public/: audio-worklet-processor.js
src/web/src/: main.js  style.css
src/web/src/html/: sidebar.js
src/web/src/styles/: chat_history.css  sidebar.css  status.css
src/web/src/utils/: audio.js  audio_device_manager.js  chat_history.js  flag_store.js  fsm.js  sidebar.js  speech_recognition.js  state_manager.js
